fix the carousel jumping when next slide comes, add #testimonials-carousel .carousel-item-next to padding css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ h1, h2, h3 {
 #testimonials-carousel {
     background-color: var(--highlight-light-color);
 }
-#testimonials-carousel .carousel-item.active {
+#testimonials-carousel .carousel-item.active, #testimonials-carousel .carousel-item-next {
     padding: 1rem 5rem;
     min-height: 150px;
     
@@ -117,14 +117,14 @@ form option, form .form-select {
 /*media queries*/
 /*Max Mobile L screen, reduce padding in testimonial carousel as it gets cramped*/
 @media screen and (max-width: 426px) {
-    #testimonials-carousel .carousel-item.active {
+    #testimonials-carousel .carousel-item.active, #testimonials-carousel .carousel-item-next {
         padding: 1rem 3rem;
 }
 }
 /*Max Mobile M screen, reduce padding in testimonial carousel as it gets cramped, larger min-height to keep all reviews on same height*/
 
 @media screen and (max-width: 376px) {
-    #testimonials-carousel .carousel-item.active {
+    #testimonials-carousel .carousel-item.active, #testimonials-carousel .carousel-item-next {
         padding: 1rem 1.5rem;
         min-height: 168px;
 }
@@ -132,7 +132,7 @@ form option, form .form-select {
 /*Max Mobile S screen, reduce padding in testimonial carousel as it gets cramped*/
 
 @media screen and (max-width: 320px) {
-    #testimonials-carousel .carousel-item.active {
+    #testimonials-carousel .carousel-item.active, #testimonials-carousel .carousel-item-next {
         padding: 1rem 1.2rem;
 }
 }
